<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="end|top">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/view_bong_setting_jiantou"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="30dp"/>
    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="15dp"
        android:background="@drawable/view_corner_2">
        <LinearLayout
            android:id="@+id/systemUpdateItemLayout"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:paddingStart="10dp"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:src="@mipmap/view_system_update"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/view_system_update"
                android:textSize="15sp"
                android:textColor="@color/textColor33"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dividerColor"/>
        <LinearLayout
            android:id="@+id/rebootDeviceItemLayout"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:paddingStart="10dp"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:src="@mipmap/view_reboot_device"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/textColor33"
                android:textSize="15sp"
                android:text="@string/view_reboot_device"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dividerColor"/>
        <LinearLayout
            android:id="@+id/unbindItemLayout"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:paddingStart="10dp"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:src="@mipmap/view_unbond"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/view_unbind"
                android:textColor="@color/textColor33"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>