<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlCustomDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:background="@drawable/view_dialog_custom_corner"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/view_dialog_title"
            android:textColor="@color/textColor33"
            android:textSize="17sp" />

        <ScrollView
            android:id="@+id/svContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="50dp"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp">


                <TextView
                    android:id="@+id/tvContentLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textColor="@color/textColor66"
                    android:textSize="13sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvContentCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="content"
                    android:textColor="@color/textColor66"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tvContentRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@color/textColor66"
                    android:textSize="13sp"
                    android:visibility="gone" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/llBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/dividerColor"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rlCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tvCancel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/view_dialog_cancel"
                        android:textColor="@color/textColor33"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:background="@color/dividerColor" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tvConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/view_dialog_confirm"
                    android:textColor="@color/textColor33"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>